fix align

--- a/public/css/taskbook2.css
+++ b/public/css/taskbook2.css
@@ -218,7 +218,7 @@
     margin-left: auto;
     margin-top: auto;
     margin-bottom: auto;
-    text-align: center;
+    text-align: left;
     height: 41px;
     display: none;
 }
@@ -513,6 +513,9 @@ body{
      margin-left: auto;
     margin-right: auto;
     display:block;
+}
+.theleft{
+    float:left;
 }
 
 .orange-btn {
